# Ai-Hackathon

./: .env.example  .gitignore  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  server.env.example  server.tunnel.env.example
.github/workflows/: build-extension.yml
alembic/: env.py
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py  security.py
app/models/: user.py
app/schemas/: auth.py  user.py
app/services/: user_service.py
apps/agents/: Dockerfile  main.py  pyproject.toml
apps/agents/agents/: feedback_writer.py  milestone_generator.py  milestone_validator.py  requirement_extractor.py  review_validator.py  rubric_generator.py  rubric_validator.py  scorer.py
apps/agents/lib/: file_parser.py  json_repair.py  prompts.py  watsonx.py
apps/agents/models/: assignment.py  chat.py  review.py
apps/agents/tests/: test_api.py  test_file_parser.py  test_json_repair.py  test_milestone_coverage.py
apps/agents/workflow/: pipeline.py  review_pipeline.py
apps/extension/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/server/: Dockerfile  package.json  tsconfig.json
apps/video/: package.json  tsconfig.json
docs/: assignmint-pitch-deck.pptx  generate_deck.py  pitch-deck.html
docs/canvas_api_docs/: README.md
docs/plans/: 2026-02-27-assignment-workspace-design.md  2026-02-27-assignment-workspace-implementation.md  2026-02-27-auth-onboarding-design.md  (+19 more)
(+283 files in other folders)
