[project]
name = "agents"
version = "0.1.0"
description = "IBM watsonx multi-agent workflow service for Assignmint"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "ibm-watsonx-ai>=1.5.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]
