[project]
name = "agents"
version = "0.1.0"
description = "IBM watsonx multi-agent workflow service for Assignmint"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "ibm-watsonx-ai>=1.5.3",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
